dag-dsl/tests/compile_fail/inline_default_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/inline_default_wrong_type.rs:46:33
   |
46 |     dag.inline_default(t.inp.n, "not an integer");
   |         --------------          ^^^^^^^^^^^^^^^^ expected `i64`, found `&str`
   |         |
   |         arguments to this method are incorrect
   |
note: method defined here
  --> src/typed.rs
   |
   |     pub fn inline_default<T>(&mut self, port: InPort<T>, value: T) -> &mut Self
   |            ^^^^^^^^^^^^^^
